# vault-x

./: .eslintrc  .gitignore  .prettierignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/vault-x/: Cargo.toml
programs/vault-x/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/vault-x/src/instructions/: mod.rs
programs/vault-x/src/instructions/transaction/: mod.rs
programs/vault-x/src/instructions/transaction/founder/: approve.rs  cancel.rs  create.rs  execute.rs  mod.rs  reject.rs
programs/vault-x/src/instructions/transaction/member/: create.rs  execute.rs  mod.rs
programs/vault-x/src/instructions/vault/: add_founder.rs  add_member.rs  create.rs  mod.rs  remove_founder.rs  remove_member.rs  update_founder_threshold.rs
programs/vault-x/src/instructions/vault_config/: init.rs  mod.rs  update_authority.rs  update_creation_fee.rs  update_treasury.rs
programs/vault-x/src/state/: founder_transaction.rs  member_transaction.rs  mod.rs  transaction_message.rs  vault.rs  vault_config.rs
test-keypairs/: test-program-keypair.json  test-program-treasury-keypair.json  test-vault-config-authority-keypair.json  test-vault-config-initializer-keypair.json
tests/: index.ts  utils.ts
tests/suites/: compression.ts  founder.ts  member.ts  vault.ts  vaultConfig.ts
vault-x-sdk/: .solitarc.js  COPYRIGHT  package.json
vault-x-sdk/idl/: vaultx.json
vault-x-sdk/src/: accounts.ts  errors.ts  index.ts  pda.ts  utils.ts
